# spitec

./: .gitignore  .gitlab-ci.yml  LICENSE  events.json  geo_structures.json  main.py  pyproject.toml
spitec/: __init__.py  callbacks.py  data_processing.py  data_products.py  languages.py  station_processing.py  themes.py  visualization.py
spitec/callbacks/: __init__.py  callbacks.py  figure.py
spitec/processing/: __init__.py  data_processing.py  site_processing.py  trajectorie.py
spitec/view/: __init__.py  languages.py  visualization.py
tests/: test_data_processing.py  test_site_processing.py  test_visualization.py
