[tool.poetry]
name = "spitec"
version = "0.1.0"
description = ""
authors = ["EkaterinaKugot <kali.kugot@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.19.0"
dash = "^2.16.1"
dash-bootstrap-components = "^1.5.0"
h5py = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
