[tool.poetry]
name = "spitec"
version = "0.1.0"
description = ""
authors = ["EkaterinaKugot <kali.kugot@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.19.0"
dash = {extras = ["diskcache"], version = "^2.17.0"}
dash-bootstrap-components = "^1.5.0"
h5py = "^3.10.0"
pathlib = "^1.0.1"
pandas = "^2.2.3"
uuid = "^1.30"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
coverage = "^7.5.3"
pytest-mock = "^3.14.0"


[tool.poetry.group.deploy.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
